<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">mobiPETIC</string>
    <string name="descricao_acao_lista_areas">Áreas</string>
    <string name="descricao_acao_lista_subareas">Subáreas</string>
    <string name="descricao_acao_lista_processos">Processos</string>
    <string name="txt_fixo_entradas">Entradas</string>
    <string name="txt_fixo_saida">Saídas</string>
    <string name="txt_fixo_responsavel">Responsável</string>
    <string name="txt_fixo_stakeholders">Stakeholders</string>
    <string name="txt_catalogo">Catálogo de Processos</string>
    <string name="menu_logout">Sair</string>
    <string name="menu_sobre">Sobre</string>
    <string name="txt_usuario">Usuário</string>
    <string name="txt_senha">Senha   </string>
    <string name="bt_login">Entrar</string>
    <string name="menu_descricao">Descrição</string>
    <string name="menu_maturidade">Analisar Maturidade</string>
    <string name="menu_condens_maturidade">Maturidade</string>
    <string name="txt_main_catalogos">Catálogos</string>
    <string name="txt_main_usuarios">Usuários</string>
    <string name="txt_main_analise">Análise</string>
    <string name="descricao_logo_empresa">Logomarca da empresa</string>
    <string name="lb_nome_acao">Nome</string>
    <string name="txt_main_acoes">Ações</string>
    <string name="titulo_mensagem_erro_sem_resposta">Sem resposta do Servidor!</string>
    <string name="mensagem_erro_sem_resposta">O servidor não está respondendo. Tente mais tarde.</string>
    <string name="botao_confirmacao">OK</string>
    <string name="titulo_mensagem_erro_sem_conexao">Sem conexão com a internet!</string>
    <string name="mensagem_erro_sem_conexao">A aplicação encontrou um problema ao tentar se conectar à internet. Verifique a conexão e tente mais tarde.</string>
    <string name="mensagem_erro_usuario_senha_incorreta">Usuário ou senha incorreta!</string>
    <string name="menu_sincronizar">Sincronizar Modificações</string>
    <string name="menu_condens_sincronizar">Sincronizar</string>
    <string name="analise_maturidade_nivel_1">1 - Mínimo</string>
    <string name="analise_maturidade_nivel_2">2 - Seguro</string>
    <string name="analise_maturidade_nivel_3">3 - Satisfatório</string>
    <string name="analise_maturidade_nivel_4">4 - Estado Ideal</string>
    <string name="descricao_acao_questionario_maturidade">Questionário de Maturidade</string>
    <string name="titulo_mensagem_maturidade_0">Nível 0 definido!</string>
    <string name="mensagem_maturidade_0">Processo crítico foi classificado como Inexistente.</string>
    <string name="titulo_mensagem_maturidade_1">Nível 1 definido!</string>
    <string name="mensagem_maturidade_1">Processo crítico foi classificado como Mínimo.</string>
    <string name="titulo_mensagem_maturidade_2">Nível 2 definido!</string>
    <string name="mensagem_maturidade_2">Processo crítico foi classificado como Seguro.</string>
    <string name="titulo_mensagem_maturidade_3">Nível 3 definido!</string>
    <string name="mensagem_maturidade_3">Processo foi classificado como Satisfatório.</string>
    <string name="titulo_mensagem_maturidade_4">Nível 4 definido!</string>
    <string name="mensagem_maturidade_4">Processo foi classificado como Ideal.</string>
    <string name="txt_fixo_editor">Respondido por</string><string name="descricao_acao_lista_acoes">Ações de Melhoria</string>
    <string name="menu_acoes">Visualizar Ações</string>
    <string name="menu_condens_acoes">Ações</string>
    <string name="menu_remover_acao">Remover</string>
    <string name="menu_editar_acao">Editar</string>
    <string name="menu_adicionar_acao">Adicionar</string>
    <string name="descricao_editor_acao">Editor de Ações de Melhoria</string>
    <string name="lb_data_inicio_acao">Data de início</string>
    <string name="lb_data_fim_acao">Data de Término</string>
    <string name="lb_custo_acao">Custo</string>
    <string name="lb_esforco_acao">Esforço (horas/pessoa)</string>
    <string name="menu_criar_acao">Criar Ação</string>
</resources>
