<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutLoginInterior"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/light_gray2"
    android:layout_gravity="center"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical" >
        
    	<ImageView
    	    android:id="@+id/imageViewLogo"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:contentDescription="@string/app_name"
    	    android:src="@drawable/mobi_logo_maior95" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewUsuario"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/txt_usuario"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/editTextUsuario"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewSenha"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/txt_senha"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/editTextSenha"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right" >

       	<ProgressBar
       	    android:id="@+id/progressBarLoad"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content" />

       	<Button
            android:id="@+id/buttonLogin"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginRight="20dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/bt_login" />
	</LinearLayout>
</LinearLayout>