<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >    

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:background="#F0F0F0" >

        <TextView
            android:id="@+id/txt_area_detalhes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingRight="5dip"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=">" />

        <TextView
            android:id="@+id/txt_subarea_detalhes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingLeft="5dip"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_titulo_processo_detalhes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#F0F0F0"
        android:gravity="center_vertical|center_horizontal"
        android:paddingBottom="5dip"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#66CCFF" />

    <TextView
        android:id="@+id/txt_subtitulo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:gravity="center"
        android:text="@string/descricao_acao_questionario_maturidade"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#DDDDDD" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right">
        
        <LinearLayout
        	android:layout_width="0dip"
    		android:layout_height="fill_parent"
    		android:layout_weight="1"
    		android:gravity="center_vertical" >

            <ImageView
            	android:id="@+id/image_maturidade"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:adjustViewBounds="true"
            	android:contentDescription="@string/mensagem_maturidade_0"
            	android:background="@drawable/maturidade0" />
       	</LinearLayout>

  		<TextView
    	    android:layout_width="wrap_content"
       	 	android:layout_height="wrap_content"
        	android:text="@string/txt_fixo_editor"
        	android:textAppearance="?android:attr/textAppearanceSmallInverse" />
  		
  		<TextView
	    	android:id="@+id/txt_editor"
    	    android:layout_width="wrap_content"
       	 	android:layout_height="wrap_content"
       	 	android:paddingLeft="5dip"
        	android:textAppearance="?android:attr/textAppearanceSmallInverse" />
    </LinearLayout>

  	<ExpandableListView
    	android:id="@+id/expand_list_questionario"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </ExpandableListView>
</LinearLayout>